<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home_black_24dp"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        android:title="@string/home" />
    <item
        android:id="@+id/sell_menu"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:menuCategory="secondary"
        android:orderInCategory="2"
        android:title="@string/sell" />
    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:menuCategory="secondary"
        android:orderInCategory="3"
        android:title="@string/account" />
    <item
        android:id="@+id/settings_menu"
        android:icon="@drawable/ic_settings_black_24dp"
        android:menuCategory="secondary"
        android:orderInCategory="4"
        android:title="@string/setting" />

</menu>